refactor : refactor the constants into AppConstants.java and simplify a bit of logic